<resources>
    <string name="app_name">Notes Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_discard">Cancel</string>
    <string name="next">Next</string>
    <string name="action_mail">Send as mail</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">Note Title</string>
    <string name="notes">Notes</string>
    <string name="courses">Courses</string>
    <string name="communicate">Communicate</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="header_general">General</string>
    <string name="header_messages">Messages</string>
    <string name="header_sync">Sync</string>

    <!-- General Preferences -->
    <string name="pref_key_display_name">user_display_name</string>
    <string name="pref_title_display_name">Display Name</string>
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_key_email_address">user_email_address</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_default_email_address">yourname@yourhost.extension</string>
    <string name="pref_key_favourite_social">user_favourite_social</string>
    <string name="pref_title_favourite_social">Favourite Social Network</string>
    <string name="pref_default_favourite_social">https://www.slack.com</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="course_editor">Course Editor</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="modules">Modules</string>
    <string name="module_id">Module Id</string>
    <string name="module_title">Module Title</string>
    <string name="is_module_complete">Completed?</string>
    <string name="course_id">Course ID</string>
    <string name="course_name">Course Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="position">POSITION</string>
    <string name="new_">New</string>
    <string name="edit_module">Edit Module</string>
</resources>