<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_note_list">

    <fragment
        android:id="@+id/nav_note_list"
        android:name="com.jeffreyorazulike.noteskeeper.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_note_list_to_nav_note"
            app:destination="@id/nav_note" />
        <action
            android:id="@+id/action_nav_note_list_to_nav_course"
            app:destination="@id/nav_course" />
    </fragment>

    <fragment
        android:id="@+id/nav_note"
        android:name="com.jeffreyorazulike.noteskeeper.ui.note.NoteFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_note">
        <argument
            android:name="@string/position"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_course"
        android:name="com.jeffreyorazulike.noteskeeper.ui.course.CourseFragment"
        android:label="@string/course_editor"
        tools:layout="@layout/fragment_course">
        <argument
            android:name="@string/position"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

</navigation>