<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_course_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_id"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_course_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/til_course_id"
            app:layout_constraintStart_toStartOf="@+id/til_course_id"
            app:layout_constraintTop_toBottomOf="@+id/til_course_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_modules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/modules"
            android:textAlignment="center"
            android:textAppearance="@style/Title"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_add"
            app:layout_constraintStart_toStartOf="@+id/til_course_name"
            app:layout_constraintTop_toBottomOf="@+id/til_course_name" />

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_modules"
            app:layout_constraintEnd_toEndOf="@+id/til_course_name"
            app:layout_constraintTop_toBottomOf="@+id/til_course_name"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:tint="@color/plurasight_orange" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_add"
            app:layout_constraintStart_toStartOf="@+id/tv_modules"
            app:layout_constraintTop_toBottomOf="@+id/tv_modules"
            tools:itemCount="2"
            tools:listitem="@layout/item_module_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
